--- a/.github/workflows/main_shortly.yml
+++ b/.github/workflows/main_shortly.yml
@@ -21,17 +21,30 @@ jobs:
         with:
           node-version: '18.x'
 
-      - name: npm install, build, and test
+      - name: Build client
         run: |
+          cd client
           npm install
-          npm run build --if-present
-          npm run test --if-present
+          npm run build
       
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v2
         with:
-          name: node-app
-          path: .
+          name: client
+          path: ./client/build
+
+      - name: Build server
+        run: |
+          npm install
+      
+      - name: Upload artifact for deployment job
+        uses: actions/upload-artifact@v2
+        with:
+          name: server
+          path: |
+            .
+            !./client
+            !./src
 
   deploy:
     runs-on: ubuntu-latest
@@ -44,7 +57,9 @@ jobs:
       - name: Download artifact from build job
         uses: actions/download-artifact@v2
         with:
-          name: node-app
+          name: |
+            client
+            server
 
       - name: 'Deploy to Azure Web App'
         uses: azure/webapps-deploy@v2
