--- a/.github/workflows/main_shortly.yml
+++ b/.github/workflows/main_shortly.yml
@@ -54,12 +54,8 @@ jobs:
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
 
     steps:
-      - name: Download artifact from build job
+      - name: Download artifacts from build job
         uses: actions/download-artifact@v2
-        with:
-          name: |
-            client
-            server
 
       - name: 'Deploy to Azure Web App'
         uses: azure/webapps-deploy@v2
