--- a/.github/workflows/main_shortly.yml
+++ b/.github/workflows/main_shortly.yml
@@ -9,9 +9,6 @@ on:
       - main
   workflow_dispatch:
 
-env:
-  AZURE_FUNCTIONAPP_PACKAGE_PATH: "."
-
 jobs:
   build:
     runs-on: windows-latest
@@ -43,7 +40,6 @@ jobs:
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v2
         with:
-          name: server
           path: |
             .
             !./client
@@ -61,11 +57,10 @@ jobs:
         uses: actions/download-artifact@v2
 
       - name: 'Deploy to Azure Web App'
-        uses: Azure/functions-action@v1
+        uses: azure/webapps-deploy@v2
         id: deploy-to-webapp
         with:
           app-name: 'Shortly'
           slot-name: 'Production'
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_894DCBD8E19C4D8C98AD99C5B6BBAFA8 }}
-          scm-do-build-during-deployment: true
           package: .
