--- a/.github/workflows/main_shortly.yml
+++ b/.github/workflows/main_shortly.yml
@@ -40,6 +40,7 @@ jobs:
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v2
         with:
+          name: server
           path: |
             .
             !./client
@@ -53,8 +54,16 @@ jobs:
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
 
     steps:
-      - name: Download artifacts from build job
+      - name: Download client artifact from build job
         uses: actions/download-artifact@v2
+        with:
+          name: client
+          path: ./client
+
+      - name: Download server artifact from build job
+        uses: actions/download-artifact@v2
+        with:
+          name: server
 
       - name: 'Deploy to Azure Web App'
         uses: azure/webapps-deploy@v2
